[package]
name = "triton_sys"
version = "0.1.0"
edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "triton_backend_sys"
# crate-type=["cdylib"]
[dependencies]
futures = "0.3.28"
infer_proto = { path = "../infer_proto"}
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.20", features = ["kv_unstable"] }
project-root = "0.2.2"


[build-dependencies]
miette = { version = "5.5.0", features = [
  "fancy",
] } # optional but gives nicer error messages!
bindgen = "0.65.1"

[registries.crates-io]
protocol = "sparse"
